--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="fullscreen.js"></script>
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
